--- a/app/src/main/res/layout/fragment_zu_fang_yyxq_2.xml
+++ b/app/src/main/res/layout/fragment_zu_fang_yyxq_2.xml
@@ -1,158 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_bj_theme"
     android:orientation="vertical">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:overScrollMode="never"
-        android:scrollbars="none">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/dp_10"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include layout="@layout/item_include_fyxx"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="30dp"
-                android:text="预约时间"
-                android:textColor="@color/color_666666"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="10dp"
-                android:text="2021.02.02 11:11:00"
-                android:textColor="@color/color_333333"
-                android:textSize="14sp" />
-
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="0.8dp"
-                android:layout_margin="15dp"
-                android:background="@color/color_eeeeee" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="20dp"
-                android:text="联系方式"
-                android:textColor="@color/color_666666"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="10dp"
-                android:text="姓名：李四"
-                android:textColor="@color/color_333333"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="10dp"
-                android:text="电话：1311234567"
-                android:textColor="@color/color_333333"
-                android:textSize="14sp" />
-
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="0.8dp"
-                android:layout_margin="15dp"
-                android:background="@color/color_eeeeee" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="20dp"
-                android:text="备注"
-                android:textColor="@color/color_666666"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="10dp"
-                android:text="备注信息"
-                android:textColor="@color/color_333333"
-                android:textSize="14sp" />
-
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="0.8dp"
-                android:layout_margin="15dp"
-                android:background="@color/color_eeeeee" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="20dp"
-                android:text="带看人员"
-                android:textColor="@color/color_666666"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:text="姓名：李四"
-                android:textColor="@color/color_333333"
-                android:textSize="14sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="20dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/bnt_lxyx"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/bnt_details_height"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/circle_line_theme_25"
-                    android:gravity="center"
-                    android:text="联系一下"
-                    android:textColor="@color/color_blue_theme"
-                    android:textSize="@dimen/bnt_details_text_size" />
-
-                <TextView
-                    android:id="@+id/bnt_qrgw"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/bnt_details_height"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_weight="2"
-                    android:background="@drawable/circle_solid_theme_25"
-                    android:gravity="center"
-                    android:text="确认顾问"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/bnt_details_text_size" />
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
