--- a/app/src/main/res/layout/activity_zu_fang_xq.xml
+++ b/app/src/main/res/layout/activity_zu_fang_xq.xml
@@ -257,8 +257,10 @@
                     android:layout_marginTop="15dp">
 
                     <TextView
+                        android:id="@+id/tv_hasVideo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         android:background="@drawable/circle_solid_2186f7_2_tm40"
                         android:paddingHorizontal="5dp"
                         android:paddingVertical="2dp"
