--- a/app/src/main/res/layout/item_include_fyxx.xml
+++ b/app/src/main/res/layout/item_include_fyxx.xml
@@ -17,6 +17,7 @@
         android:src="@android:mipmap/sym_def_app_icon" />
 
     <TextView
+        android:id="@+id/tv_hasVideo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/head_icon"
@@ -65,6 +66,7 @@
         android:layout_toEndOf="@id/head_icon">
 
         <TextView
+            android:id="@+id/hasVideo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/circle_solid_2186f7_2_tm40"
