--- a/app/src/main/res/layout/activity_zu_fang_yy.xml
+++ b/app/src/main/res/layout/activity_zu_fang_yy.xml
@@ -30,8 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="请输入姓名"
             android:gravity="end"
+            android:hint="请输入姓名"
             android:textColor="@color/color_333333"
             android:textCursorDrawable="@drawable/common_edit_input_line"
             android:textSize="@dimen/sp_14" />
@@ -93,10 +93,20 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/openHomeTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="15dp"
+        android:visibility="gone"
+        android:layout_marginStart="20dp"
+        android:paddingTop="@dimen/dp_10"
+        android:text="可预约时间段"
+        android:textColor="@color/color_999999" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/white"
         android:paddingHorizontal="15dp"
         android:paddingVertical="@dimen/dp_10">
@@ -201,8 +211,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableEnd="@mipmap/ic_jiantou_you"
-            android:gravity="end"
             android:drawablePadding="@dimen/dp_10"
+            android:gravity="end"
             android:hint="请选择带看顾问"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_14" />
