--- a/app/src/main/res/layout/item_zu_fang_db_dz.xml
+++ b/app/src/main/res/layout/item_zu_fang_db_dz.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="45dp"
     android:background="@drawable/circle_line_eee_1"
-    android:gravity="center"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/iv_select"
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:src="@drawable/common_selected_circle" />
+        android:layout_centerInParent="true"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/iv_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/common_selected_circle" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/iv_select"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_14" />
 
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="@dimen/dp_10"
-        android:layout_toEndOf="@id/iv_select"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp_14" />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/iv_select1"
@@ -31,5 +39,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_vertical"
-        android:src="@mipmap/ic_cancel" />
+        android:src="@drawable/frame" />
 </RelativeLayout>
